置換文字列に、大文字小文字変換を追加
・すべて大文字
・すべて小文字
・先頭大文字
・変換無し

--- a/Editor/Template/CustomPackage/AssemblyEditor-Tests.asmdef.template
+++ b/Editor/Template/CustomPackage/AssemblyEditor-Tests.asmdef.template
@@ -1,5 +1,5 @@
 {
-    "name": "[company-name].[package-name].[library-name].Editor.Tests",
+    "name": "[company-name:TopUpper].[package-name:TopUpper].Editor.Tests",
     "references": [],
     "includePlatforms": [
         "Editor"
