--- a/Editor/Template/CustomPackage/Assembly-Tests.asmdef.template
+++ b/Editor/Template/CustomPackage/Assembly-Tests.asmdef.template
@@ -1,3 +1,3 @@
 {
-	"name": "[company-name].[package-name].[library-name].Tests"
+	"name": "[company-name:TopUpper].[package-name:TopUpper].Tests"
 }
